<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary">
    </androidx.appcompat.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tool_bar">
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/logo_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sample"
                        android:scaleType="centerCrop"/>

                <LinearLayout
                        android:id="@+id/text_view"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:layout_below="@+id/logo_top"
                        android:gravity="center">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/number_of_visits"/>
                    <TextView
                            android:id="@+id/number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/number"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/times"/>
                    <TextView
                            android:id="@+id/rank"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:layout_marginEnd="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/rank_member"/>
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/stamp_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_below="@+id/text_view"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/stroke_frame">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        <ImageView
                                android:id="@+id/stamp_area1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/logo_stamp_area_icon"
                                android:background="@drawable/stroke_line"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"/>
                        <ImageView
                                android:id="@+id/stamp_area2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/logo_stamp_area_icon"
                                android:background="@drawable/stroke_line"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"/>
                        <ImageView
                                android:id="@+id/stamp_area3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/logo_stamp_area_icon"
                                android:background="@drawable/stroke_line"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"/>
                        <ImageView
                                android:id="@+id/stamp_area4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/logo_stamp_area_icon"
                                android:background="@drawable/stroke_line"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"/>
                        <ImageView
                                android:id="@+id/stamp_area5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/logo_stamp_area_icon"
                                android:background="@drawable/stroke_line"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"/>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        <ImageView
                                android:id="@+id/stamp_area6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/logo_stamp_area_icon"
                                android:background="@drawable/stroke_line"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"/>
                        <ImageView
                                android:id="@+id/stamp_area7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/logo_stamp_area_icon"
                                android:background="@drawable/stroke_line"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"/>
                        <ImageView
                                android:id="@+id/stamp_area8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/logo_stamp_area_icon"
                                android:background="@drawable/stroke_line"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"/>
                        <ImageView
                                android:id="@+id/stamp_area9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/logo_stamp_area_icon"
                                android:background="@drawable/stroke_line"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"/>
                        <ImageView
                                android:id="@+id/stamp_area10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/logo_stamp_area_icon"
                                android:background="@drawable/stroke_line"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                        android:id="@+id/benefits_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/stamp_area"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/benefits_text"/>

                <Button
                        android:id="@+id/button_stamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/benefits_text"
                        android:text="@string/button_stamp"/>
            </RelativeLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>


